welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:13: error: not enough arguments for method brosse: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  brosse()
        ^