welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def brosse(c:Color){
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
}

def slash(c:Color){
  avance()
  brosse(c)
  recule()
  gauche()
  avance()
  brosse()
  recule()
  droite()
  
}


override def run() {
}

